--- a/src/Product.css
+++ b/src/Product.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 1000px) and (min-width: 600px){
       
   .product_image{
-      max-height: 150px !important;
+      height: 150px !important;
   }
   .product_info p{
     font-size: 16px !important;
@@ -17,7 +17,7 @@
 @media screen and (max-width: 600px){
  
 .product_image{
-      max-height: 100px !important;
+      height: 100px !important;
   }
   .product_info p{
     font-size: 14px !important;
@@ -31,8 +31,6 @@
 }
 
 
-
-
 .product{
     display: flex;
     width: 100%;
@@ -44,8 +42,12 @@
     z-index: 1;
 }
 
+.card{
+    border: none!important;
+}
+
 .product_image{
-    max-height: 200px;
+    height: 200px;
     object-fit: contain;
     margin-bottom: 15px;
     align-items: left;
@@ -54,5 +56,19 @@
 
 .product_info p{
     font-size: 18px;
+    text-align: left;
+    margin-bottom:0px;
+     overflow: hidden;
+     text-overflow: ellipsis;
+    display: -webkit-box;
+   -webkit-line-clamp: 2; 
+   -webkit-box-orient: vertical;
+
+}
+
+.addbutton{
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 10px;
 }
 
