--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -84,10 +84,25 @@
     background-color: #232F3E;
     display: flex;
     align-items: center;
+    padding: 0px 10px !important;
+    
 }
 
+.navbarmaintitle{
+    color: white !important;
+    text-align: left !important;
+    padding: 5px 10px ;
+    vertical-align: middle;
+}
+
+.navbarmaintitle:hover{
+     background-color: #F3A847 !important;
+    border-radius: 3px;
+    color: black !important;
+}
+
+
 .navbartitles{
-    margin-left: 3px;
     color: white !important;
     text-align: left !important;
     margin-bottom: 0px;
@@ -99,6 +114,13 @@
     align-items: center !important;
 }
 
+.navbartitles:hover{
+    background-color: #F3A847 !important;
+    border-radius: 3px;
+    color: black !important;
+
+}
+
 .navbardropdown a{
     color: white !important;
     float: left !important;
@@ -106,10 +128,13 @@
 
 .navbardropdown:hover .dropdown-menu {
     display: block;
+    
 }
 
-.navbardropdown:hover .navbartitles{
-    border-color: white !important;
+.nav-item:hover .nav-link {
+    background-color: #F3A847 !important;
+    border-radius: 3px;
+    color: black !important;
 }
 
 .navbardropdownitems{
