--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -1,3 +1,11 @@
+a {
+    color: black !important;
+}
+
+a:hover{
+    text-decoration: none!important;
+}
+
 @media screen and (max-width: 1000px) and (min-width: 600px){
       
   .product_image{
@@ -22,6 +30,7 @@
   .product_info p{
     font-size: 14px !important;
      overflow: hidden;
+     color: black !important;
      text-overflow: ellipsis;
     display: -webkit-box;
    -webkit-line-clamp: 2; 
