--- a/src/css/Details.css
+++ b/src/css/Details.css
@@ -25,8 +25,8 @@
 }
 
 .imageBig{
+    width: 100%;
     height: 100%;
-    
    object-fit:contain;
 }
 
@@ -35,6 +35,12 @@
     object-fit: contain;
     padding: 10px;
     margin: 10px;
+}
+
+.imageSmall:hover{
+    border: 2px solid !important;
+    border-color: #F3A847 !important;
+    border-radius: 3px;
 }
 
 .productTitle{
@@ -52,7 +58,7 @@
     width: max-Content;
 }
 
-.icon{
+.iconItem{
     display: flex;
     flex-direction: column; 
     background-color: white;
@@ -60,7 +66,7 @@
     height: max-content;
 }
 
-.icon img{
+.iconItem img{
     height: 30px;
     object-fit: contain;
     
