--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -201,7 +201,7 @@
     background-color: #232F3E !important;
     float: left !important;
 }
-.dropdown-menu{
+.navbar .dropdown-menu{
     background-color: #232F3E !important;
     float: left !important;
 }
