--- a/src/css/Checkout.css
+++ b/src/css/Checkout.css
@@ -1,6 +1,5 @@
 .checkout{
     display: flex;
-
     padding: 20px;
     background-color: #EAEDED;
     height: max-content;
@@ -18,11 +17,20 @@
 
 .checkout_section{
     padding: 10px;
-    width: 70%;
+    flex: 0.7;
     background-color: white;
     margin-right: 10px;
+    margin-top: 10px;
     
 }
 .subtotalsection{
-    width: 30%;
+    flex: 0.3;
+    margin-top: 10px;
+    margin-right: 5px;
+}
+
+@media screen and (max-width: 800px){
+    .checkout{
+        flex-direction: column;
+    }
 }
