--- a/src/css/CheckoutProduct.css
+++ b/src/css/CheckoutProduct.css
@@ -2,19 +2,22 @@
        .checkoutproducttitle{
         font-size: 15px !important;
        }
+       .checkoutproduct{
+           margin: 0px !important;
+       }
 }
 
 .checkoutproduct{
     display: flex;
     flex-direction: row;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     
     align-items: center;
 }
 
 .checkoutproductimgbox{
-    margin: 60px;
+    margin: 10px 30px 10px 10px;
     height: 250px;
     width: 250px;
     flex: 0.4;
