--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -83,6 +83,18 @@ a:hover{
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 10px;
-    background-color: #F3A847 !important;
+    padding: 5px;
+    background-color: #f0c14b ;
+    border: 1px solid !important;
+    border-color: #a88734 #9c7e31 #846a29 !important;
+    border-color: #a88734 #9c7e31 #846a29; 
+    color: #111;
+    border-radius: 2px; 
+
+
+}
+
+.addbutton:hover{
+    background-color: #EEBA36 !important;
 }
 
