--- a/src/css/Payment.css
+++ b/src/css/Payment.css
@@ -37,3 +37,19 @@
     flex: 0.8;
     text-align: left;
 }
+
+.payment_details button{
+    background: #f0c14b;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    font-weight: bolder;
+    margin-top: 10px;
+    border-color: #a88734 #9c7e31 #846a29; 
+    color: #111;
+  }
+
+.payment_details button:hover{
+    background: #EEBA36;
+}
