--- a/src/css/Order.css
+++ b/src/css/Order.css
@@ -1,18 +1,25 @@
 .order {
     padding: 40px;
-    margin: 20px 0;
     border: 1px solid lightgray;
     background-color: white;
     position: relative;
+    display:flex; 
+    flex-direction: column;
 }
 
-.order__id {
+.order_id {
     position: absolute;
-    top: 40px;
+    top: 20px;
     right: 20px;
   }
 
-.order__total {
+.order_total {
     font-weight: 500;
     text-align: right;
   }
+
+.order h2,p{
+    text-align: left;
+}
+
+
