--- a/src/css/Orders.css
+++ b/src/css/Orders.css
@@ -1,7 +1,8 @@
 .orders {
-    padding: 20px 80px;
+    padding: 10px 40px;
 }
 
-.orders > h1 {
+.orders > h2 {
     margin: 30px 0;
+    text-align: left;
 }
